# gemini-chunked-transcribe

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gemini_transcribe/: __init__.py  api.py  cli.py  transcriber.py
tests/: __init__.py
