[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-chunked-transcribe"
version = "0.1.0"
description = "High-quality long audio transcription using Google's Gemini API with intelligent chunking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ivan Vendrov", email = "ivan@vendrov.com"}
]
keywords = ["transcription", "audio", "gemini", "google", "ai", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ivendrov/gemini-chunked-transcribe"
Repository = "https://github.com/ivendrov/gemini-chunked-transcribe"
Issues = "https://github.com/ivendrov/gemini-chunked-transcribe/issues"

[project.scripts]
gemini-transcribe = "gemini_transcribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
